testsuite/tests/typing-layouts-products/parsing_nullary_type.compilers.reference
File "parsing_nullary_type.ml", line 10, characters 11-12:
10 | type t = #()
                ^
Error: Syntax error
